changed to make it look nice

--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
 <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Responsive Design Fundamentals</h1>
-    <p>We will move to responsive units, in flexbox (flex grow factor, etc) and the CSS grid (fr) in the next two weeks.</p>
-    <div id="container">
-        <section id="box1">
-            <h2>Box 1</h2>
-        </section>
-        <section id="box2">
-            <h2>Box 2</h2>
-        </section>
-    </div>
-    <script src="js/main.js"></script>    
+
+<div class="row">
+    <div class="column">Column 1</div>
+    <div class="column">Column 2</div>
+    <div class="column">Column 3</div>
+    <div class="column">Column 4</div>
+</div>
+    
+<script src="js/main.js"></script>
 </body>
 </html>
